--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,6 +7,10 @@
     --text-color: #161823;
 
     --font-family: 'IBM Plex Sans', sans-serif;
+
+    --header-height: 60px;
+    --header-width: 1200px;
+    --footer-height: 500px;
 }
 
 * {
