--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,11 +5,13 @@
     --black: #000;
     --white: #fff;
     --text-color: #161823;
+    --primary-color: #ffc824;
 
     --font-family: 'IBM Plex Sans', sans-serif;
 
-    --header-height: 60px;
+    --header-height: 100px;
     --header-width: 1200px;
+
     --footer-height: 500px;
 }
 
