--- a/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -1,13 +1,131 @@
+:root {
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-border-radius: 92px;
+}
+
 .wrapper {
     height: var(--header-height);
-    background-color: antiquewhite;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
+    // position: fixed;
+    // top: 0;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
+    // z-index: 99;
+}
+
+.container {
+    height: 100%;
+    width: var(--header-width);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    width: 240px;
+    height: 40px;
+    object-fit: contain;
 }
 
 .content {
     height: 100%;
-    width: var(--header-width);
-    background-color: #ccc;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.category {
+    text-align: center;
+}
+
+.label {
+    font-size: 1.8rem;
+    font-weight: 400;
+    padding: 0 10px;
+    color: #808080;
+}
+
+.search-bar {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 8px;
+    width: 400px;
+    height: var(--search-height);
+    padding-left: 16px;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--search-border-radius);
+    border: 1px solid transparent;
+    display: flex;
+    position: relative;
+
+    input {
+        flex: 1;
+        height: 100%;
+        color: var(--text-color);
+        font-size: 1.6rem;
+        border: none;
+        outline: none;
+        background-color: transparent;
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        right: 52px;
+        top: var(--search-top-spacer);
+        width: 1px;
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        background-color: rgba(22, 24, 35, 0.06);
+    }
+
+    &:focus-within {
+        border: 1px solid rgba(22, 24, 35, 0.2);
+    }
+}
+
+.search-btn {
+    width: 52px;
+    height: 100%;
+    border: none;
+    outline: none;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    font-size: 1.8rem;
+    color: rgba(22, 24, 35, 0.34);
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+}
+
+.user {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.avatar {
+    width: 35px;
+    height: 35px;
+    border-radius: 999px;
+    object-fit: cover;
+    margin-right: 16px;
+}
+
+.name {
+    font-size: 1.8rem;
+    color: var(--text-color);
+}
+
+.cart {
+    font-size: 2.4rem;
+    color: var(--primary-color);
+    cursor: pointer;
 }
