--- a/src/frontend/online-book-store/src/components/Popper/Popper.module.scss
+++ b/src/frontend/online-book-store/src/components/Popper/Popper.module.scss
@@ -3,6 +3,6 @@
     max-height: 352px;
     min-height: 127px;
     border-radius: 8px;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--white);
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
 }
