--- a/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -95,12 +95,18 @@
     }
 }
 
-.close {
+.clear,
+.loading {
     border: none;
     outline: none;
     margin-right: 16px;
     color: rgba(22, 24, 35, 0.34);
     cursor: pointer;
+
+    position: absolute;
+    right: 52px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .search-btn {
@@ -154,5 +160,17 @@
 .cart {
     font-size: 2.4rem;
     color: var(--primary-color);
+    position: relative;
     cursor: pointer;
+}
+
+.badge {
+    font-size: 1.4rem;
+    color: var(--white);
+    background-color: #e8898e;
+    padding: 2px 4px;
+    border-radius: 99px;
+    position: absolute;
+    top: -10px;
+    right: -12px;
 }
