--- a/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -10,12 +10,13 @@
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
     justify-content: center;
-    // position: fixed;
-    // top: 0;
-    // bottom: 0;
-    // left: 0;
-    // right: 0;
-    // z-index: 99;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+    background-color: var(--white);
 }
 
 .container {
