UI Body (Contact Page) - Complete Contact

--- a/src/frontend/online-book-store/src/components/Layouts/SubHeaderContentLayout/SubHeaderContentLayout.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/SubHeaderContentLayout/SubHeaderContentLayout.module.scss
@@ -6,11 +6,11 @@
 }
 
 .title {
-    font-size: 64px;
+    font-size: 6.4rem;
     font-weight: 400;
     letter-spacing: 8px;
     padding: 0 16px;
     margin-bottom: 8px;
-    border-bottom: 4px solid var(--primary-color);
+    border-bottom: 2px solid var(--primary-color);
     letter-spacing: 2px;
 }
