--- a/src/frontend/online-book-store/src/components/Button/Button.module.scss
+++ b/src/frontend/online-book-store/src/components/Button/Button.module.scss
@@ -8,6 +8,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
     cursor: pointer;
 
     &.disabled {
@@ -28,7 +29,7 @@
     }
 }
 
-.addToCart {
+.addtocart {
     width: 100%;
     padding: 8px 16px;
     color: #808080;
@@ -59,7 +60,7 @@
         border: 4px solid #e8898e;
         color: #e8898e;
         cursor: pointer;
-        animation: appearance ease 0.8s;
+        animation: appearance ease-in 0.4s;
     }
 }
 
@@ -69,11 +70,26 @@
     font-size: 1.6rem;
     font-weight: 300;
     color: var(--white);
-    background-color: #e8898e;
+    background-color: #e3807c;
 
     &:hover {
         opacity: 0.8;
         cursor: pointer;
+    }
+}
+
+.findmore {
+    width: 100%;
+    font-size: 1.4rem;
+    border: 2px solid #e8898e;
+    background-color: var(--white);
+    color: #e8898e;
+
+    &:hover {
+        cursor: pointer;
+        background-color: #e3807c;
+        color: var(--white);
+        animation: appearance ease-in 0.4s;
     }
 }
 
