--- a/src/frontend/online-book-store/src/pages/AboutUs/AboutUs.module.scss
+++ b/src/frontend/online-book-store/src/pages/AboutUs/AboutUs.module.scss
@@ -45,5 +45,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 64px;
+    flex-wrap: wrap;
+    margin-top: 32px;
 }
