--- a/src/frontend/online-book-store/src/pages/Home/components/IntroductionItem/IntroductionItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/Home/components/IntroductionItem/IntroductionItem.module.scss
@@ -5,19 +5,20 @@
 }
 
 .image {
-    max-width: 460px;
+    width: 50%;
     height: 480px;
     object-fit: cover;
     object-position: 50% 50%;
 }
 
 .content {
-    flex: 1;
+    flex: 0.5;
     display: flex;
     align-items: center;
     flex-direction: column;
 
-    margin: 0 128px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .title {
