UI SignIn & SignOut

--- a/src/frontend/online-book-store/src/components/Button/Button.module.scss
+++ b/src/frontend/online-book-store/src/components/Button/Button.module.scss
@@ -1,8 +1,6 @@
 .wrapper {
     min-width: 70px;
-    height: 35px;
-    font-size: 1.8rem;
-    padding: 4px 16px;
+    min-height: 35px;
     outline: none;
     border: none;
     display: inline-flex;
