--- a/src/frontend/online-book-store/src/pages/ForgotPassword/ForgotPassword.module.scss
+++ b/src/frontend/online-book-store/src/pages/ForgotPassword/ForgotPassword.module.scss
@@ -3,6 +3,7 @@
     position: relative;
 }
 
+
 .header {
     display: flex;
     position: fixed;
@@ -31,6 +32,10 @@
     color: var(--black);
 }
 
+.header-icon.sign-in-icon {
+    transform: rotate(180deg);
+}
+
 .image-container {
     position: relative;
 }
@@ -53,15 +58,16 @@
 
 .signin-form {
     position: fixed;
-    left: 660px;
-    top: 90px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .form-container {
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(20px);
-    width: 600px;
-    height: 800px;
+    width: 800px;
+    height: 600px;
     border-radius: 50px;
 }
 
@@ -78,7 +84,7 @@
         right: 50%;
         transform: translate(-50%, -50%);
         height: 4px;
-        width: 520px;
+        width: 720px;
     }
 }
 
@@ -114,34 +120,6 @@
     font-size: 1.8rem;
 }
 
-.info {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 48px;
-}
-
-.remember-password {
-    display: flex;
-    align-items: center;
-}
-
-.remember-check {
-    margin-right: 12px;
-    width: 20px;
-    height: 20px;
-}
-
-.info-text {
-    font-size: 2.4rem;
-    color: var(--white);
-
-    &:hover {
-        cursor: pointer;
-        color: #00FFFF;
-    }
-}
-
 .submit-btn {
     width: 100%;
     font-size: 3.2rem;
@@ -150,34 +128,6 @@
     color: var(--white);
 
     padding: 16px;
-    margin-bottom: 32px;
-    border-radius: 50px;
-}
-
-.footer {
-    padding: 24px 40px;
-}
-
-.signup-text {
-    font-size: 2.4rem;
-    font-weight: bold;
-    color: var(--white);
-    text-decoration: underline;
-
-    &:hover {
-        cursor: pointer;
-        color: #00FFFF;
-    }
-}
-
-.gg-signup {
     margin-top: 32px;
-    display: flex;
-    align-items: center;
-}
-
-.gg-logo {
-    width: 50px;
-    height: 50px;
-    margin-right: 16px;
+    border-radius: 50px;
 }
