--- a/src/frontend/online-book-store/src/components/SendEmail/SendEmail.module.scss
+++ b/src/frontend/online-book-store/src/components/SendEmail/SendEmail.module.scss
@@ -77,3 +77,12 @@
     color: var(--white);
     font-size: 1.6rem;
 }
+
+.loading {
+    position: absolute;
+    top: 44%;
+    bottom: 50%;
+    left: 47%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+}
