Frontend - Sign in with GG #1

--- a/src/frontend/online-book-store/src/components/Button/Button.module.scss
+++ b/src/frontend/online-book-store/src/components/Button/Button.module.scss
@@ -16,6 +16,10 @@
     }
 }
 
+.text {
+    background-color: transparent;
+}
+
 .primary {
     background-color: transparent;
     font-weight: 300;
