--- a/src/frontend/online-book-store/src/pages/SignIn/SignIn.module.scss
+++ b/src/frontend/online-book-store/src/pages/SignIn/SignIn.module.scss
@@ -47,7 +47,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    
+
     background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -70,7 +70,7 @@
     padding: 22px 0;
 
     ::after {
-        content: "";
+        content: '';
         background-color: var(--white);
         position: absolute;
         top: 140px;
@@ -138,7 +138,7 @@
 
     &:hover {
         cursor: pointer;
-        color: #00FFFF;
+        color: #00ffff;
     }
 }
 
@@ -146,7 +146,7 @@
     width: 100%;
     font-size: 3.2rem;
     font-weight: bold;
-    background: linear-gradient(90deg, #5D3FD3 30%, #00FFFF 90%);
+    background: linear-gradient(90deg, #5d3fd3 30%, #00ffff 90%);
     color: var(--white);
 
     padding: 16px;
@@ -166,18 +166,6 @@
 
     &:hover {
         cursor: pointer;
-        color: #00FFFF;
+        color: #00ffff;
     }
-}
-
-.gg-signup {
-    margin-top: 32px;
-    display: flex;
-    align-items: center;
-}
-
-.gg-logo {
-    width: 50px;
-    height: 50px;
-    margin-right: 16px;
 }
