--- a/src/frontend/online-book-store/src/pages/ShopBooks/ShopBooks.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/ShopBooks.module.scss
@@ -5,3 +5,9 @@
     justify-content: center;
     flex-direction: column;
 }
+
+.core {
+    background-color: #def0fd;
+    width: 100%;
+    padding: 64px 32px;
+}
