--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/FilterAllMenu/FilterAllMenu.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/FilterAllMenu/FilterAllMenu.module.scss
@@ -95,7 +95,7 @@
     font-weight: bold;
     text-transform: uppercase;
     color: var(--white);
-    background-color: #ee4d2d;
+    background-color: var(--order-color);
     border-radius: 10px;
 
     width: 200px;
