--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,10 @@
     --black: #000;
     --white: #fff;
     --text-color: #161823;
+    --star-color: #ffea00;
+    --faded-color: #808080;
+    --discount-color: #c72127;
+    --order-color: #ee4d2d;
     --primary-color: #ffc824;
 
     --font-family: 'IBM Plex Sans', sans-serif;
