FrontEnd - Complete CartPage #1

--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,9 @@
     --faded-color: #808080;
     --discount-color: #c72127;
     --order-color: #ee4d2d;
+    --deepblue-color: #525f7f;
+    --lightblue-bg-color: #8898aa;
+    --voucher-color: #0096ff;
     --primary-color: #ffc824;
 
     --font-family: 'IBM Plex Sans', sans-serif;
@@ -16,6 +19,8 @@
     --header-height: 120px;
     --header-width: 1200px;
     --footer-width: 1200px;
+
+    --cart-page-width: 1600px;
 }
 
 * {
