--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/FilterMenu/FilterMenu.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/FilterMenu/FilterMenu.module.scss
@@ -21,14 +21,9 @@
 
     max-height: 200px;
     overflow-y: scroll;
+    scrollbar-width: thin;
 
     padding: 0 32px;
-
-    &::-webkit-scrollbar {
-        display: none;
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-    }
 }
 
 .item {
