--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/BodyContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/BodyContent.module.scss
@@ -80,3 +80,45 @@
 .core {
     margin-top: 16px;
 }
+
+/*  FOOTER  */
+
+.footer {
+    margin-top: 64px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.back_btn,
+.next_btn {
+    padding: 8px 16px;
+    font-size: 2.4rem;
+    color: var(--faded-color);
+    cursor: pointer;
+}
+
+.pages {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.page_item {
+    font-size: 2.4rem;
+    margin-right: 64px;
+    padding: 8px 16px;
+    text-decoration: none;
+    color: var(--faded-color);
+
+    &:nth-child(1) {
+        margin-left: 64px;
+    }
+}
+
+.page_item.active {
+    color: var(--white);
+    background-color: var(--order-color);
+    border-radius: 5px;
+}
