FrontEnd - Popup Notification

--- a/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -143,6 +143,14 @@
 
 /* User - container */
 
+.notification_container {
+    position: relative;
+}
+
+.notification_wrapper {
+    height: 0;
+}
+
 .chat,
 .notification {
     position: relative;
