--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,8 @@
 :root {
     --black: #000;
     --white: #fff;
+
+    // Logged colors
     --text-color: #161823;
     --star-color: #ffea00;
     --faded-color: #808080;
@@ -14,7 +16,19 @@
     --voucher-color: #0096ff;
     --primary-color: #ffc824;
 
-    --font-family: 'IBM Plex Sans', sans-serif;
+    // Guest colors
+    --guest-purple-100-color: rgba(93, 63, 211, 1);
+    --guest-purple-50-color: rgba(93, 63, 211, 0.5);
+    --guest-purple-25-color: rgba(93, 63, 211, 0.25);
+    --guest-cyan-100-color: rgba(0, 255, 255, 1);
+    --guest-cyan-50-color: rgba(0, 255, 255, 0.5);
+    --guest-cyan-25-color: rgba(0, 255, 255, 0.25);
+    --guest-blue-100-color: rgba(0, 128, 255, 1);
+    --guest-blue-50-color: rgba(0, 128, 255, 0.5);
+    --guest-blue-25-color: rgba(0, 128, 255, 0.25);
+    --guest-shadow-color: rgba(128, 128, 128, 0.5);
+
+    --font-family: 'IBM Plex Sans', Tahoma, Verdana, Arial, sans-serif;
 
     --header-height: 120px;
     --header-width: 1200px;
