--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,14 +5,16 @@
     --black: #000;
     --white: #fff;
     --text-color: #161823;
-    --star-color: #ffea00;
+    --star-color: #ffbf00;
     --faded-color: #808080;
     --discount-color: #c72127;
     --order-color: #ee4d2d;
     --deepblue-color: #525f7f;
     --lightblue-bg-color: #8898aa;
     --voucher-color: #0096ff;
-    --primary-color: #ffc824;
+    --primary-color: #ffcc00;
+    --primary-blue: #003366;
+    --primary-light-yellow: #fffaeb;
 
     --font-family: 'IBM Plex Sans', sans-serif;
 
