--- a/src/frontend/online-book-store/src/pages/Contact/Contact.module.scss
+++ b/src/frontend/online-book-store/src/pages/Contact/Contact.module.scss
@@ -103,6 +103,6 @@ textarea.input-form {
 .faq-body {
     width: 980px;
     height: 100%;
-    background-color: #cccccc;
+    background-color: #194775;
     padding: 0 48px 16px 48px;
 }
