--- a/src/frontend/online-book-store/src/pages/Home/components/EventsContent/EventsContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/Home/components/EventsContent/EventsContent.module.scss
@@ -13,7 +13,7 @@
     flex: 1;
     display: flex;
     flex-direction: row;
-    background-color: #415161;
+    background-color: var(--primary-blue);
     position: relative;
 
     height: 1180px;
@@ -60,7 +60,7 @@
 
 .text_item {
     max-width: 40%;
-    background-color: var(--white);
+    background-color: var(--primary-light-yellow);
     box-shadow: 0 0 4px #ccc;
     border-radius: 20px;
 
@@ -108,7 +108,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #415161;
+    background-color: var(--primary-blue);
     padding: 16px;
 }
 
