--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
     background-color: var(--white);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
 
     &:hover .image {
@@ -106,6 +107,8 @@
     color: var(--faded-color);
     font-size: 1.6rem;
     height: 140px;
+
+    text-align: justify;
 
     display: -webkit-box;
     -webkit-line-clamp: 6; /* Number of lines to show */
