--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/Products/Products.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/Products/Products.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     display: grid;
     grid-template-rows: 500px;
-    grid-template-columns: 365px 365px 365px 365px;
+    grid-template-columns: 300px 300px 300px 300px 300px;
 
     justify-content: space-between;
     margin-bottom: 8px;
