--- a/src/frontend/online-book-store/src/pages/ShopBooks/ShopBooks.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/ShopBooks.module.scss
@@ -7,7 +7,8 @@
 }
 
 .core {
-    background-color: #def0fd;
+    background-color: var(--primary-color);
     width: 100%;
-    padding: 64px 32px;
+    // padding: 64px 16px;
+    margin-bottom: 64px;
 }
