--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -14,6 +14,7 @@
     --deepblue-color: #525f7f;
     --lightblue-bg-color: #8898aa;
     --voucher-color: #0096ff;
+    --emerald-color: #50c878;
     --primary-color: #ffcc00;
     --primary-blue: #003366;
     --primary-light-yellow: #fffaeb;
