--- a/src/frontend/online-book-store/src/pages/CartPage/CartPage.module.scss
+++ b/src/frontend/online-book-store/src/pages/CartPage/CartPage.module.scss
@@ -73,7 +73,7 @@
     border-radius: 5px;
     padding: 16px;
 
-    max-height: 700px;
+    height: 700px;
     overflow-y: scroll;
 
     scrollbar-width: thin;
@@ -90,6 +90,12 @@
 
     display: flex;
     flex-direction: column;
+}
+
+.empty_cart_img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .total_checkout,
