--- a/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/frontend/online-book-store/src/components/GlobalStyles/GlobalStyles.scss
@@ -19,6 +19,9 @@
     --primary-blue: #003366;
     --primary-light-yellow: #fffaeb;
 
+    --confirmed-color: #005fff;
+    --received-color: #55a999;
+
     // Guest colors
     --guest-purple-100-color: rgba(93, 63, 211, 1);
     --guest-purple-50-color: rgba(93, 63, 211, 0.5);
