--- a/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventItem/GuestEventItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventItem/GuestEventItem.module.scss
@@ -39,7 +39,7 @@
     padding: 16px;
 
     &:hover {
-        color: #808080;
-        background-color: var(--primary-color);
+        color: var(--white);
+        background-color: var(--guest-darkblue-full);
     }
 }
