UI - Logic Search

--- a/src/frontend/online-book-store/src/components/Popper/Popper.module.scss
+++ b/src/frontend/online-book-store/src/components/Popper/Popper.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 100%;
-    max-height: 352px;
+    // max-height: 352px;
     min-height: 100%;
     // border-radius: 8px;
     background-color: var(--white);
