--- a/src/frontend/online-book-store/src/components/Search/Search.module.scss
+++ b/src/frontend/online-book-store/src/components/Search/Search.module.scss
@@ -99,3 +99,9 @@
     font-size: 1.6rem;
     font-weight: 400;
 }
+
+.product_search_body {
+    max-height: 300px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+}
