Contact to Email

--- a/src/frontend/online-book-store/src/pages/SignIn/SignIn.module.scss
+++ b/src/frontend/online-book-store/src/pages/SignIn/SignIn.module.scss
@@ -169,3 +169,33 @@
         color: #00ffff;
     }
 }
+
+/* Loading */
+
+.overlay_loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color: #000000, $alpha: 0.8);
+    z-index: 999;
+}
+
+.loading_container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.loading_text {
+    color: var(--white);
+    font-size: 2.4rem;
+    font-weight: bold;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
