--- a/src/frontend/online-book-store/src/components/PopUp/PopUp.module.scss
+++ b/src/frontend/online-book-store/src/components/PopUp/PopUp.module.scss
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.66);
+    background: rgba(255, 255, 255, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -49,7 +49,7 @@
 }
 
 .closeButton:hover {
-    color: #f00;
+    color: var(--guest-darkblue-full);
     transform: scale(1.2);
 }
 
@@ -64,12 +64,13 @@
 }
 
 .body a {
-    color: var(--guest-blue-full);
+    color: var(--guest-semi-lightblue-full);
     font-weight: 700;
     text-decoration: none;
 }
+
 .body a:hover {
-    color: #f00;
+    color: var(--guest-lightblue-full);
 }
 
 .continueButton {
@@ -79,7 +80,7 @@
     padding: 10px 20px;
     color: black;
     cursor: pointer;
-    margin: 5px 0 20px 0;
+    margin: 5px 0 40px 0;
     font-weight: 700;
     text-align: center;
     font-size: 24px;
