--- a/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
+++ b/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
@@ -73,7 +73,7 @@
         content: '';
         background-color: white;
         position: absolute;
-        top: 140px;
+        top: 120px;
         left: 50%;
         right: 50%;
         transform: translate(-50%, -50%);
@@ -90,28 +90,32 @@
 }
 
 .body {
-    padding: 32px 40px 0 40px;
+    padding: 0px 40px 0 40px;
 }
 
 .input-field {
-    margin-bottom: 36px;
+    margin-bottom: 40px;
 }
 
 .input-label {
     color: white;
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: bold;
 }
 
 .input-bar {
     width: 100%;
-    height: 50px;
+    height: 60px;
     outline: none;
     border: none;
     border-bottom: 1px solid white;
     background-color: transparent;
-    color: var(--white);
+    color: black;
     font-size: 1.8rem;
+}
+
+input::placeholder{
+    color: rgb(80, 80, 80);
 }
 
 .info {
@@ -129,11 +133,11 @@
 .remember-check {
     margin-right: 12px;
     width: 20px;
-    height: 20px;
+    height: 80px;
 }
 
 .info-text {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     color: var(--white);
 
     &:hover {
@@ -147,7 +151,7 @@
     font-size: 3.2rem;
     font-weight: bold;
     background: linear-gradient(90deg, #5d3fd3 30%, #00ffff 90%);
-    color: var(--white);
+    color: white;
 
     padding: 16px;
     margin-bottom: 32px;
@@ -159,7 +163,7 @@
 }
 
 .signup-text {
-    font-size: 2.4rem;
+    font-size: 2rem;
     font-weight: bold;
     color: var(--white);
     text-decoration: underline;
