--- a/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
+++ b/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
@@ -138,7 +138,7 @@ input::placeholder{
 
 .info-text {
     font-size: 1.8rem;
-    color: var(--white);
+    color: white;
 
     &:hover {
         cursor: pointer;
