--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,4 +1,4 @@
 .container {
-    min-height: 1000px;
-    // background-color: aquamarine;
+    min-height: 900px;
+    background-color: #cccccc;
 }
