--- a/src/frontend/admin-online-book-store/src/components/Layouts/SideBar/SideBar.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/SideBar/SideBar.scss
@@ -1,5 +1,5 @@
 :root {
-    --top: 60px;
+    --bg-color: #405189;
 }
 .side-bar-space {
     height: 100%;
@@ -12,7 +12,7 @@
     left: 0;
     right: 0;
     z-index: 99;
-    background-color: #405189;
+    background-color: var(--bg-color);
 }
 
 .logo {
@@ -41,6 +41,8 @@
 
 .dashboards-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
+    // border-style: double;
     left: 0px;
     top: 170px;
     font-size: 1.6rem;
@@ -49,6 +51,8 @@
 
 .notification-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
+    // border-style: double;
     left: 0px;
     top: 230px;
     font-size: 1.6rem;
@@ -57,6 +61,7 @@
 
 .events-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 0px;
     top: 290px;
     font-size: 1.6rem;
@@ -73,6 +78,7 @@
 
 .book-settings-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 0px;
     top: 420px;
     font-size: 1.6rem;
@@ -81,6 +87,7 @@
 
 .order-settings-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 0px;
     top: 480px;
     font-size: 1.6rem;
@@ -89,6 +96,7 @@
 
 .user-management-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 0px;
     top: 540px;
     font-size: 1.6rem;
@@ -97,6 +105,7 @@
 
 .authentication-tag {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 20px;
     top: 630px;
     font-size: 0.8rem;
@@ -105,6 +114,7 @@
 
 .sign-out-button {
     position: absolute;
+    padding: 0px 225px 0px 0px;
     left: 0px;
     top: 670px;
     font-size: 1.6rem;
@@ -116,4 +126,44 @@
     font-size: 1.2rem;
     color: white;
     padding: 3px 7px;
+}
+
+.vertical-menu {
+    width: 300px; /* Set a width if you like */
+    padding: 120px 0px;
+}
+
+.vertical-menu a {
+    background-color: var(--bg-color);
+    color: white; /* Black text color */
+    display: block; /* Make the links appear below each other */
+    padding: 20px; /* Add some padding */
+    text-decoration: none; /* Remove underline from links */
+}
+
+.vertical-menu a:hover {
+    background-color: #6076be; /* Dark grey background on mouse-over */
+}
+
+.vertical-menu a.active {
+    background-color: #6076be; /* Add a green color to the "active/current" link */
+}
+
+.vertical-menu a.unhover {
+    color: #838FB9;
+    font-size: 0.8rem;
+}
+
+.vertical-menu a.unhover:hover {
+    color: #838FB9;
+    font-size: 0.8rem;
+}
+
+.vertical-menu-tag {
+    // position: static;
+    padding: 20px;
+    top: 20px;
+    bottom: 20px;
+    font-size: 0.8rem;
+    color: #838FB9;
 }
