--- a/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/ShopBooks/BodyContent/components/ProductItem/ProductItem.module.scss
@@ -145,3 +145,15 @@
     font-size: 1.6rem;
     font-weight: bold;
 }
+
+/* loading */
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    z-index: 999;
+}
