--- a/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventItem/GuestEventItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventItem/GuestEventItem.module.scss
@@ -31,15 +31,18 @@
 
 .more-btn {
     width: 150px;
-    border: 4px solid #808080;
-    color: #808080;
+    border: 4px solid var(--black);
+    color: var(--black);
     font-weight: 700;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
     margin-top: 64px;
     padding: 16px;
 
     &:hover {
+        border: 4px solid var(--white);
         color: var(--white);
-        background-color: var(--guest-darkblue-full);
+        background-color: var(--guest-semi-darkblue-full);
+        transition: background 0.25s ease-in-out, color 0.25s ease-in-out, transform 0.25s ease-in-out,
+            border 0.25s ease-in-out;
     }
 }
