--- a/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventsContent/GuestEventsContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestHome/components/GuestEventsContent/GuestEventsContent.module.scss
@@ -13,7 +13,7 @@
     flex: 1;
     display: flex;
     flex-direction: row;
-    background-color: rgba(0, 255, 255, 0.25);
+    background-color: var(--guest-semi-lightblue-full);
     position: relative;
 
     height: 1180px;
@@ -40,7 +40,7 @@
 }
 
 .content {
-    background-color: #fafafa;
+    background-color: var(--guest-gray-half);
     max-width: 60%;
     padding: 16px 64px;
 }
@@ -65,7 +65,7 @@
     border-radius: 20px;
 
     &:nth-child(2) {
-        background-color: rgba(93, 63, 211, 0.75);
+        background-color: var(--guest-darkblue-full);
         .text_item_label {
             color: var(--white);
             border-bottom: 1px solid var(--white);
@@ -75,7 +75,7 @@
         }
     }
     &:nth-child(1) {
-        background-color: rgba(93, 63, 211, 0.25);
+        background-color: var(--guest-lightblue-full);
         .text_item_label {
             color: var(--black);
             border-bottom: 1px solid var(--black);
@@ -118,7 +118,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    background-color: #415161;
+    background-color: var(--guest-semi-lightblue-full);
+    border-top: 4px solid var(--white);
     padding: 16px;
 }
 
