--- a/src/frontend/online-book-store/src/pages/GuestHome/components/GuestIntroductionItem/GuestIntroductionItem.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestHome/components/GuestIntroductionItem/GuestIntroductionItem.module.scss
@@ -22,9 +22,9 @@
 }
 
 .title {
-    color: #e8898e;
+    color: var(--guest-darkblue-full);
     font-size: 2.8rem;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 2px;
     margin-bottom: 32px;
 }
@@ -33,6 +33,20 @@
     min-height: 200px;
     font-size: 1.8rem;
     font-weight: 500;
-    color: #808080;
+    color: var(--guest-darkblue-half);
     text-align: center;
+}
+
+.findMoreButton {
+    border: 4px solid var(--black);
+    background-color: var(--white);
+    color: var(--guest-semi-darkblue-full);
+    padding: 10px 0;
+    &:hover {
+        border: 4px solid var(--guest-semi-lightblue-full);
+        background-color: var(--guest-semi-darkblue-full);
+        color: var(--white);
+        transition: background 0.25s ease-in-out, color 0.25s ease-in-out, transform 0.25s ease-in-out,
+            border 0.25s ease-in-out;
+    }
 }
