--- a/src/frontend/admin-online-book-store/src/components/Notification/Notification.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Notification/Notification.module.scss
@@ -5,15 +5,14 @@
 
 .wrapper {
     position: absolute;
-    top: 45px;
-    left: 0;
+    top: 200px;
+    left: 300px;
 
     width: var(--notification-width);
     height: 0;
     opacity: 0;
     visibility: hidden;
     overflow: hidden;
-
     transition: height 0.25s, opacity 101ms 4s, visibility 101ms 0.25s;
 }
 
@@ -25,6 +24,7 @@
 
     visibility: visible;
     opacity: 1;
+    background-color: white;
 
     transition: height 0.25s;
 }
