--- a/src/frontend/admin-online-book-store/src/components/Layouts/SideBar/SideBar.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/SideBar/SideBar.scss
@@ -1,6 +1,7 @@
 :root {
     --bg-color: #405189;
 }
+
 .side-bar-space {
     height: 100%;
     width: 300px;
@@ -17,17 +18,17 @@
 
 .logo {
     position: fixed;
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     object-fit: contain;
     padding: 10px 10px;
 }
 
 .website-name {
     position: fixed;
-    left: 120px;
-    top: 42.5px;
-    font-size: 1.6rem;
+    left: 118px;
+    top: 44px;
+    font-size: 2.4rem;
     color: white;
 }
 
@@ -150,20 +151,46 @@
 }
 
 .vertical-menu-tag {
-    // position: static;
-    padding: 0px 20px;
-    font-size: 0.8rem;
+    margin-left: 20px;
+    margin-top: 24px;
+    margin-bottom: -20px;
+    font-size: 1.2rem;
     color: #838FB9;
 }
 
 .menu-box {
-    padding: 120px 0px;
+    padding: 110px 0px;
 }
 
-.menu-choice {
-    // margin-top: 16px;
+
+.menu-choice-noti {
     display: inline;
-    padding: 0px 0px 0px 0px;
+    margin-left: 20px;
+    margin-top: 24px;
+    font-size: 2.0rem;
+    color: white;
+}
+
+
+.menu-choice {
+    display: inline;
+    margin-left: 20px;
+    margin-top: 16px;
+    font-size: 2.0rem;
+    color: white;
+}
+
+.notification-icon {
     font-size: 1.2rem;
     color: white;
+}
+.badge {
+    font-size: 1.4rem;
+    color: var(--white);
+    background-color: #e8898e;
+    padding: 2px 8px;
+    border-radius: 99px;
+    position: absolute;
+    top: -5px;
+    right: 5px;
 }
