--- a/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
+++ b/src/frontend/admin-online-book-store/src/pages/SignIn/SignIn.module.scss
@@ -54,26 +54,26 @@
 .signin-form {
     position: fixed;
     left: 660px;
-    top: 20px;
+    top: 120px;
 }
 
 .form-container {
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(20px);
     width: 600px;
-    height: 800px;
+    height: 650px;
     border-radius: 50px;
 }
 
 .title {
     text-align: center;
-    padding: 0px 0px;
+    padding: 22px 0;
 
     ::after {
         content: '';
-        background-color: white;
+        background-color: var(--white);
         position: absolute;
-        top: 120px;
+        top: 140px;
         left: 50%;
         right: 50%;
         transform: translate(-50%, -50%);
@@ -84,38 +84,34 @@
 
 .label {
     text-transform: uppercase;
-    font-size: 5rem;
+    font-size: 6.4rem;
     font-weight: bold;
-    color: white;
+    color: var(--white);
 }
 
 .body {
-    padding: 0px 40px 0 40px;
+    padding: 32px 40px 0 40px;
 }
 
 .input-field {
-    margin-bottom: 40px;
+    margin-bottom: 36px;
 }
 
 .input-label {
-    color: white;
-    font-size: 2rem;
+    color: var(--white);
+    font-size: 2.4rem;
     font-weight: bold;
 }
 
 .input-bar {
     width: 100%;
-    height: 60px;
+    height: 50px;
     outline: none;
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--white);
     background-color: transparent;
-    color: black;
+    color: var(--white);
     font-size: 1.8rem;
-}
-
-input::placeholder{
-    color: rgb(80, 80, 80);
 }
 
 .info {
@@ -133,12 +129,12 @@ input::placeholder{
 .remember-check {
     margin-right: 12px;
     width: 20px;
-    height: 80px;
+    height: 20px;
 }
 
 .info-text {
-    font-size: 1.8rem;
-    color: white;
+    font-size: 2.4rem;
+    color: var(--white);
 
     &:hover {
         cursor: pointer;
@@ -151,7 +147,7 @@ input::placeholder{
     font-size: 3.2rem;
     font-weight: bold;
     background: linear-gradient(90deg, #5d3fd3 30%, #00ffff 90%);
-    color: white;
+    color: var(--white);
 
     padding: 16px;
     margin-bottom: 32px;
@@ -163,7 +159,7 @@ input::placeholder{
 }
 
 .signup-text {
-    font-size: 2rem;
+    font-size: 2.4rem;
     font-weight: bold;
     color: var(--white);
     text-decoration: underline;
