--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -41,56 +41,6 @@
     padding: 15px 330px;
 }
 
-.label {
-    text-decoration: none;
-    padding: 4px 16px;
-    margin-right: 16px;
-    font-size: 1.6rem;
-}
-
-.label:hover {
-    scale: 1.25;
-    font-weight: 700;
-    transition: all 0.5s;
-}
-
-.label:not(:hover) {
-    transition: all 0.5s;
-}
-
-/* Sign In - Sign Up buttons */
-.auth-buttons {
-    display: flex;
-    // align-items: center;
-}
-
-.signin,
-.signup {
-    color: var(--black);
-    font-weight: 700;
-    background: var(--guest-semi-lightblue-full);
-    box-shadow: 0 4px 8px var(--guest-gray-half);
-    width: 200px;
-    height: 75px;
-    border-radius: 38px;
-    display: flex;
-    // justify-content: center;
-    // align-items: center;
-    font-size: 24px;
-    margin: 0 15px;
-    transition: background 0.5s ease-in-out, color 0.5s ease-in-out, transform 0.5s ease-in-out,
-        box-shadow 0.5s ease-in-out;
-}
-
-/* Hover effects for buttons */
-.signin:hover,
-.signup:hover {
-    background: var(--guest-semi-darkblue-full);
-    color: var(--white);
-    transform: scale(1.05);
-    box-shadow: 0 8px 16px var(--guest-shadow-color);
-    font-weight: 700;
-}
 
 /* User - container */
 
@@ -115,13 +65,23 @@
     margin-top: 7px;
     margin-left: 5px;
     font-size: 1.8rem;
-    color: var(--text-color);
+    // color: var(--text-color);
+    color: black;
 }
 
 .social-contact {
     position: fixed;
-    font-size: 3.2rem;
+    margin-left: 1550px;
+    margin-top: 30px;
+    font-size: 32px;
     color: black;
-    top: 30px;
-    left: 1550px;
 }
+
+// .btn {
+//     position: fixed;
+//     background-color: white;
+//     font-size: 32px;
+//     color: black;
+//     top: 30px;
+//     left: 1550px;
+// }
