--- a/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
+++ b/src/frontend/admin-online-book-store/src/components/Layouts/DefaultLayout/Header/Header.module.scss
@@ -69,7 +69,7 @@
     color: black;
 }
 
-.social-contact {
+.social-contact-button {
     position: fixed;
     margin-left: 1550px;
     margin-top: 30px;
