--- a/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/GuestFooter/GuestFooter.module.scss
+++ b/src/frontend/online-book-store/src/components/Layouts/DefaultLayout/GuestFooter/GuestFooter.module.scss
@@ -43,12 +43,18 @@
     height: 100%;
     font-size: 35px;
     margin-bottom: 12px;
-    color: #808080;
+    color: var(--guest-darkblue-full);
     background-color: transparent;
 }
 
+.icon-btn:hover {
+    color: var(--white);
+    transform: scale(1.25);
+    transition: color 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
 .details {
-    color: #808080;
+    color: var(--guest-darkblue-full);
     font-size: 1.6rem;
     margin-bottom: 16px;
 }
@@ -60,7 +66,7 @@
 
 .label {
     font-size: 1.6rem;
-    color: #808080;
+    color: var(--guest-darkblue-full);
     margin-bottom: 8px;
 }
 
@@ -87,7 +93,7 @@
 
 .copyright {
     font-size: 1.4rem;
-    color: #808080;
+    color: var(--guest-darkblue-full);
 }
 
 .text {
