--- a/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/BodyContent.module.scss
+++ b/src/frontend/online-book-store/src/pages/GuestShopBooks/GuestBodyContent/BodyContent.module.scss
@@ -7,7 +7,7 @@
     width: 100%;
     position: relative;
 
-    padding: 64px 12px;
+    padding: 64px 12px 128px 12px;
 }
 
 .sidebar {
@@ -95,8 +95,9 @@
     align-items: center;
     justify-content: center;
 
-    background-color: var(--primary-blue);
-    padding: 16px;
+    background-color: var(--white);
+    padding: 32px;
+    margin: 32px 0;
 
     position: absolute;
     bottom: calc(-84px);
@@ -104,35 +105,22 @@
     right: 0;
 }
 
-.back_btn,
-.next_btn {
-    padding: 8px 16px;
-    font-size: 2.4rem;
+.see-more-btn {
+    width: 720px;
+    height: 120px;
     color: var(--white);
-    cursor: pointer;
+    font-weight: 500;
+    background-color: var(--guest-darkblue-full);
+    border: 4px solid var(--guest-darkblue-full);
+    font-size: 36px;
+    border-radius: 25px;
+    transition: background 0.25s ease-in-out, color 0.25s ease-in-out, transform 0.25s ease-in-out;
 }
 
-.pages {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-.page_item {
-    font-size: 2.4rem;
-    margin-right: 64px;
-    padding: 8px 16px;
-    text-decoration: none;
-    color: var(--white);
-
-    &:nth-child(1) {
-        margin-left: 64px;
-    }
-}
-
-.page_item.active {
-    color: var(--white);
-    background-color: var(--order-color);
-    border-radius: 5px;
+.see-more-btn:hover {
+    background: var(--guest-semi-lightblue-full);
+    color: var(--black);
+    transform: scale(1.05);
+    font-weight: 700;
+    border: 4px solid var(--guest-lightblue-full);
 }
